--- a/definition.yml
+++ b/definition.yml
@@ -1,6 +1,6 @@
 id: waterfall
-docker_repository: dynverse/dynmethods:waterfall
-container_url: https://github.com/dynverse/dynmethods/tree/master/containers/waterfall
+docker_repository: dynverse/ti_waterfall
+container_url: https://github.com/dynverse/ti_waterfall
 name: Waterfall
 type: algorithm
 platform: R
