--- a/definition.yml
+++ b/definition.yml
@@ -3,7 +3,7 @@ docker_repository: dynverse/ti_waterfall
 singularity_collection: 1588
 container_url: https://github.com/dynverse/ti_waterfall
 name: Waterfall
-type: algorithm
+source: tool
 platform: R
 doi: 10.1016/j.stem.2015.07.013
 google_scholar_cluster_id: '4819957734275746771'
